@@ -358,7 +358,7 @@ InstructionDesc tclInstructionTable[] = {
 	 * of keys (popped from the stack) must be the same length as the list
 	 * of variables.
 	 * Stack:  ... keyList => ... */
-    {"dictUpdateEnd",	  9,    -1,	   1,	{OPERAND_LVT4, OPERAND_AUX4}},
+    {"dictUpdateEnd",	  9,    -1,	   2,	{OPERAND_LVT4, OPERAND_AUX4}},
 	/* Reflect the state of local variables (described in the aux data
 	 * referred to by the second immediate argument) back to the state of
 	 * the dictionary in the variable referred to by the first immediate
