@@ -1,3 +1,11 @@
+2007-09-10  Miguel Sofer  <msofer@users.sf.net>
+
+	* generic/tclCompile.c: fix tclInstructionTable entry for
+	dictUpdateEnd
+
+	* generic/tclExecute.c: remove unneeded setting of 'cleanup'
+	variable before jumping to checkForCatch.	
+
 2007-09-10  Don Porter  <dgp@users.sourceforge.net>
 
 	* doc/package.n:	Restored the document parallel syntax of the
